root/css/style.css
/* ... */
.bigButtonOrange:active {
    background: #f65735;
}

.bigButtonBlack {
    border: 1px solid #000;
    /* Gradient */
    background-color: #000;  /* for non-css3 browsers */
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#5b5b5b', endColorstr='#000'); /* for IE */
    background: -webkit-gradient(linear, left top, left bottom, from(#5b5b5b), to(#000)); /* for webkit browsers */
    background: -moz-linear-gradient(top,  #5b5b5b,  #000); /* for firefox 3.6+ */
}
.bigButtonBlack:hover {
    background-color: #5b5b5b;  /* for non-css3 browsers */
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2b2b2b', endColorstr='#000'); /* for IE */
    background: -webkit-gradient(linear, left top, left bottom, from(#2b2b2b), to(#000)); /* for webkit browsers */
    background: -moz-linear-gradient(top,  #2b2b2b,  #000); /* for firefox 3.6+ */
}
.bigButtonBlack:active {
    background: #000;
}

.bigButtonGrey {
    border: 1px solid #aaa;
    /* Gradient */
    background-color: #eee;  /* for non-css3 browsers */
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#aaaaaa'); /* for IE */
    background: -webkit-gradient(linear, left top, left bottom, from(#eee), to(#aaa)); /* for webkit browsers */
    background: -moz-linear-gradient(top,  #eee,  #aaa); /* for firefox 3.6+ */
}
.bigButtonGrey:hover {
    background-color: #ccc;  /* for non-css3 browsers */
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cccccc', endColorstr='#aaaaaa'); /* for IE */
    background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#aaa)); /* for webkit browsers */
    background: -moz-linear-gradient(top,  #cccccc,  #aaaaaa); /* for firefox 3.6+ */
}
.bigButtonGrey:active {
    background: #aaaaaa;
}
/* get satisfaction tab */
a#fdbk_tab {
    top: 200px !important;
}

#wizard .customOffset {
    display: none;
}

#wizard label.error {
    font-size: 90%;
    margin-left: 130px;
    white-space: nowrap;
}

#wizard .help {
    color: #333;
    font-style: italic;
    margin: 10px 0;
}

#wizard .field {
    clear: both;
    padding: 10px 5px;
}
#wizard .field .name {
    float: left;
    width: 130px;
    text-align: right;
    margin-right: 10px;
}

#wizard .loading {
    display: none;
}
#wizard .loading img {
    position: absolute;
    left: 200px;
    top: 100px;
}

/* Calendar Styles */
.calendar {
    background: #fff;
    width: 180px;
    padding: 10px;

    /* gradient */
    background-color: #fefeef;  /* for non-css3 browsers */
    background: -webkit-gradient(linear, left top, left bottom, from(#fefeef), to(#adcaad)); /* for webkit browsers */
    background: -moz-linear-gradient(top,  #fefeef,  #adcaad); /* for firefox 3.6+ */

    /* Rounded borders */
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;

    /* Drop shadow */
    -moz-box-shadow: 3px 3px 4px #8e9884;
    -webkit-box-shadow: 3px 3px 4px #8e9884;
    box-shadow: 3px 3px 4px #8e9884;
    /* For IE 8 */
    -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#8e9884')";

    /* For IE 5.5 - 7 */
    filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#8e9884') /* drop shadow */
        progid:DXImageTransform.Microsoft.gradient(startColorstr='#fefeef', endColorstr='#adcaad'); /* gradient */
}

.calendar .ui-datepicker-title {
    display: block;
    width: 100%;
    text-align: center;
}

.calendar .ui-datepicker-month {
    display: block;
}

.calendar .ui-datepicker-year {
    font-size: 80%;
}

.calendar table {
    width: 100%
}

.calendar .day {
    text-align: center;
}

.calendar .day span {
    padding: 1px;
    color: #495942;
    display: block;
}

.calendar .legend1 {
    background-color: #f6f9e8;
    color: #5e9f42;
}
.calendar .legend2 {
    background: #f6f9e8 url(../images/legend2.png) repeat;
    color: #5e9f42;
}
.calendar .legend3 {
    background: #f6f9e8 url(../images/legend3.png) repeat;
    color: #5e9f42;
}
.calendar .legend4 {
    background: #f6f9e8 url(../images/legend4.png) repeat;
    color: #5e9f42;
}

.calendar .ui-datepicker-today {
    border: 1px solid #d22;
}

.calendar .ui-datepicker-prev {
    float: left;
}

.calendar .ui-datepicker-header {
    position: relative;
    padding: .2em 0;
}

.calendar .ui-datepicker-prev,
.calendar .ui-datepicker-next {
    position:absolute;
    width: 1.8em;
    height: 1.8em;
}
.calendar .ui-datepicker-prev span,
.calendar .ui-datepicker-next span {
    display: block;
    position: absolute;
    left: 50%;
    margin-left: -8px;
    top: 50%;
    margin-top: -8px;
}

.ui-helper-hidden-accessible { position: absolute !important; clip: rect(1px 1px 1px 1px); clip: rect(1px,1px,1px,1px); }

/* legend */
.legend {
    padding-top: 10px;
}
.legend .example {
    width: 26px;
    height: 18px;
    margin: 4px;
}

.legend .definition {
    font-size: 8pt;
    padding-left: 5px;
}
/* end legend */

/* done Calendar Styles */

/* Icons */
.ui-icon {
    display: block;
    text-indent: -99999px;
    overflow: hidden;
    background-repeat:
    no-repeat;
}
.ui-icon {
    width: 16px;
    height: 16px;
    background-image: url(images/ui-icons_222222_256x240.png);
}
.calendar .ui-datepicker-next {
    right: 2px;
}
.calendar .ui-datepicker-prev-hover,
.calendar .ui-datepicker-next-hover {
    top: 1px;
}

.ui-icon-circle-triangle-e { background-position: -48px -192px; }
.ui-icon-circle-triangle-s { background-position: -64px -192px; }
.ui-icon-circle-triangle-w { background-position: -80px -192px; }
.ui-icon-circle-triangle-n { background-position: -96px -192px; }
.ui-icon-alert { background-position: 0 -144px; }
/* done icons */

/* Other page styles */
#staticLayout h1 {
    font-size: 18pt;
    margin: 15px 0 5px 0;
}
#staticLayout h2 {
    font-size: 15pt;
    margin: 15px 0 5px 0;
}
#staticLayout h3 {
    font-size: 13pt;
    margin: 15px 0 5px 0;
}
/* ... */

